--- a/app/src/main/res/layout/activity_music.xml
+++ b/app/src/main/res/layout/activity_music.xml
@@ -9,19 +9,19 @@
 
     <Button
         android:id="@+id/bb"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="69dp"
-        android:text="|>" />
+        android:layout_marginTop="68dp"
+        android:text="Playe" />
 
     <Button
         android:id="@+id/bbb"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="168dp"
-        android:text="||" />
+        android:layout_marginTop="68dp"
+        android:text="Puse" />
 </RelativeLayout>
